Thu, 05 Jun 2008 18:12:20 +0200 <thp@perli.net>
New (optional) dependency: PIL (for Rockbox Cover Art)

	* README: Mention PIL as dependency for Rockbox Cover Art

Thu, 05 Jun 2008 18:10:11 +0200 <thp@perli.net>
Merge Support for Rockbox Cover Art patch (by David Spreen and Nick)
	* src/gpodder/config.py: Add configuration options for rockbox cover
	art, thanks to Nick for providing the patch and integration
	* src/gpodder/gui.py: Add David Spreen to the list of contributors
	* src/gpodder/sync.py: Merge patch from David Spreen and Nick to
	support Rockbox cover art synchronization

Sun, 01 Jun 2008 10:17:32 +0200 <thp@perli.net>
Merge back changes from the 0.11.3 release branch into trunk

	* bin/gpodder: Updated for 0.11.3+svn
	* data/messages.pot: Merged from 0.11.3 release branch
	* data/po/*.po: Merged from 0.11.3 release branch
	* doc/man/gpodder.1: Merged from 0.11.3 release branch
	* README: Merged from 0.11.3 release branch

Sun, 25 May 2008 17:17:10 +0200 <thp@perli.net>
Fix problem with BitTorrent preferences

	* src/gpodder/gui.py: Merge bugfix patch by Nick (nikosapi) to make
	the BitTorrent preferences work correctly

Sun, 25 May 2008 17:10:36 +0200 <thp@perli.net>
Updated Spanish and Swedish translations

	* data/po/es.po: Updated Spanish translation by Marcos Hernández
	* data/po/sv.po: Updated Swedish translation by Anders Kvist
	* src/gpodder/gui.py: Add Marcos Hernández to list of contributors,
	because he did the updated Spanish translation

Fri, 23 May 2008 21:39:32 +0200 <thp@perli.net>
Updated French translation by Jérôme Chabod

	* data/po/fr.po: Updated French translation by Jérôme Chabod

Mon, 19 May 2008 15:12:41 +0200 <thp@perli.net>
Updated translations before the release stabilization phase

	* data/messages.pot: Updated from source
	* data/po/*.po: Updated from messages.pot

Fri, 16 May 2008 10:02:23 +0200 <thp@perli.net>
Add option to not hide channel cover and pill when the sidebar gets smaller
