@@ -1,3 +1,10 @@
+Thu, 05 Jun 2008 18:16:05 +0200 <thp@perli.net>
+Improve/fix podcast list tooltips as suggested by the Usability Test
+
+	* src/gpodder/gui.py: Restructure and redesign the podcast list
+	according to the suggestions in the Usability Test
+	* src/gpodder/libpodcasts.py: Add helping code for the new tooltips
+
 Thu, 05 Jun 2008 18:12:20 +0200 <thp@perli.net>
 New (optional) dependency: PIL (for Rockbox Cover Art)
 
